welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
  for (cpt <- 1 to 15){
           ^